--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,12 @@
     box-sizing: inherit;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 .navigation{
 	display: grid;
 	grid-template-columns: 5% 5% 10% 60% 10% 10%;
-	
-
 	list-style-type: none;
 	border-bottom: 1px solid grey;
 	background-color: white;
@@ -24,7 +22,7 @@ body{
 
 .navigation li{
 	display: inline-block;
-	/* padding:5px 10px 0 10px; */
+	
 	
 	
 	
@@ -60,7 +58,7 @@ body{
 	/* border-radius: 5px; */
 	margin-right: 10px;
 	border-color: rgb(50, 104, 145);
-	margin-right: 10px;
+	
 	text-transform: uppercase;
 	color: white;
 	font-size: 11px;
@@ -72,17 +70,18 @@ body{
 	
 	/* border-radius: 5px; */
 	border-color: rgb(50, 104, 145);
-	margin-right: -60px;
+	/* margin-right: -60px; */
 	text-transform: uppercase;
 	color: white;
 }
-.space{
-	text-transform: uppercase;
-}
+
 .newyork{
 	font-weight: bold;
 	
 	
+}
+.heading{
+	font-weight: bold;
 }
 .header{
 	display: flex;
@@ -95,6 +94,30 @@ body{
 
 	
 }
+.details{
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	
+}
+.march{
+	
+	flex-basis: 30%;
+	font-weight: bold;
+}
+.facebook, .twitter, .share, .envelope {
+	flex-basis: 3%;
+	
+}
+.my-color{
+	color: black;
+}
+.author-1{
+	border-bottom: 1px solid black;
+	
+}
+
+
 .para p{
 	display: flex;
 	flex-direction: column;
@@ -130,27 +153,109 @@ body{
 	grid-template-columns: 1fr 2fr 1fr;
 	grid-template-rows: 1fr;
 }
-.image-inflation{
-	display: block;
-	height: auto;
-	max-width:100%;
+
+
+.caption{
+	font-size: 13px;
+	color: #000000;
 }
-.universe p{
-	top: 24.8264%;
-	left: 0.0436%;
-	width: 228px;
+
+.caption-images{
+	
+	display: grid;
+	grid-row: 3;
+	grid-column: 1 / -1;
+	grid-template-columns:  1fr 1fr 1fr 1fr   ;
+	grid-template-rows: 1fr 1fr;
+	grid-gap: 10px;
+	align-items: baseline;
+	z-index: 1;
 }
-.move{
-	position: absolute;
+.last{
+	margin-bottom:10px;
 }
-.nextEnough p{
-	top: 24.8264%;
-	left: 25.5619%;
-	width: 228px;
+.last-grid{
+	display: grid;
+	grid-template-columns: 1fr 2fr 1fr;
+	grid-template-areas: "iframe";
+	grid-template-rows: 1fr;
+}
+.icons li{
+	display: inline-block;
+	justify-content: space-between;
 
 }
-/* container > *{
-    color: white;
-    padding: 2em;
-    /* border-radius: 0.5em; 
-}*/
+.icons li a{
+text-decoration: none;
+
+}
+.comments{
+	display: flex;
+}
+
+iframe{
+	grid-area: iframe;
+	width: 100%;
+	height: 60vh;
+
+}
+.btn-comments{
+	
+	background-color: rgb(50, 104, 145);
+	width:40%;
+	padding: 10 20px 5 20px;
+	color: white;
+}
+.space-astronomy{
+	border-top: 1px solid black;
+	border-bottom: 3px double gray;
+
+}
+.column-grid{
+	display: grid;
+	grid-template-columns:1fr 1fr 1fr 1fr;
+	border-bottom: 1px solid black;
+	/* grid-template-rows:1fr; */
+}
+.p-style{
+	color: black;
+	text-decoration: none;
+}
+.column-grid2{
+	display: grid;
+	grid-template-columns:1fr 1fr 1fr 1fr;
+	
+
+}
+.footer-grid{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+	padding-bottom: 10px;
+	border-bottom: 1px solid gray;
+}
+.news-1{
+	list-style-type: none;
+
+}
+.more{
+	border-right: 1px solid gray;
+}
+.rate{
+	padding-bottom: 20px;
+	border-bottom: 1px solid gray;
+}
+.nav-sections{
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+
+}
+.direction{
+	
+	
+
+}
+.direction li{
+	display: inline-block;
+
+}
